--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>Index</title>
+        <title>Contact</title>
     </head>
     <body>
         <p>CONTACT US</p>
