--- a/detail.html
+++ b/detail.html
@@ -5,13 +5,42 @@
     <body>
         <Header>
             <img src="assests/images/logo.png" alt="logo" width="150" height ="100">
-            <p>Header div</p>
+            <a href = "/login.html" target = "_blank">Login</a>
         </Header>
         <div>
-            <p>Content div</p>
+            <img src='https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg'><br>
+            <a href='payment.html'>Book Now</a>
+            <h2>Radisson Blu Hotel</h2>
+            <p>RATING</p>
+            <P>5 Star</P>
+            <p>AMENITIES</p>
+            <ul>
+                <li>
+                    Room service
+                </li>
+                <li>
+                    Restaurant
+                </li>
+                <li>
+                    Business Center
+                </li>
+                <li>
+                    Fitness Center
+                </li>
+                <li>
+                    Pool
+                </li>
+            </ul>
+            <h5>DESCRIPTION</h5>
+            <p>Over 900,000 Hotels Worldwide. Book Now, Pay When You Stay. List Your Property. Register Online. Sign Up For Deals. Become An Affiliate.</p>
+
         </div>
         <footer>
-            <p>Footer div</p>
+            <a href = "/contact.html" target = "_blank">Contact Us</a><br>
+            <img src = "assests/images/facebook.png" width ="22" height = "20">
+            <img src = "assests/images/instagram.png" width ="22" height = "20">
+            <img src = "assests/images/twitter.png" width ="22" height = "20">
+            <p>© 2020 ROOM SEARCH PVT.LTD</p>
         </footer>
     </body>
 </html>
