--- a/index.html
+++ b/index.html
@@ -5,13 +5,22 @@
     <body>
         <Header>
             <img src="assests/images/logo.png" alt="logo" width="150" height ="100">
-            <p>Header div</p>
+            <a href = "/login.html" target = "_blank">Login</a>
         </Header>
         <div>
-            <p>Content div</p>
+            <p>Search Bar</p>
+            <a href = "/list.html"><img src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fe/a2/new-delhi.jpg" width="300" height="300"></a>
+            <img src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fc/f0/goa.jpg" width="300" height="300">
+            <img src="https://media-cdn.tripadvisor.com/media/photo-s/0f/98/f7/df/charminar.jpg" width="300" height="300">
+            <img src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fe/ac/kolkata-calcutta.jpg" width="300" height="300"><br>
+            <a href="/index.html">View more>></a>   
         </div>
         <footer>
-            <p>Footer div</p>
+            <a href = "/contact.html" target = "_blank">Contact Us</a><br>
+            <img src = "assests/images/facebook.png" width ="22" height = "20">
+            <img src = "assests/images/instagram.png" width ="22" height = "20">
+            <img src = "assests/images/twitter.png" width ="22" height = "20">
+            <p>© 2020 ROOM SEARCH PVT.LTD</p>
         </footer>
     </body>
 </html>
