--- a/list.html
+++ b/list.html
@@ -5,13 +5,44 @@
     <body>
         <Header>
             <img src="assests/images/logo.png" alt="logo" width="150" height ="100">
-            <p>Header div</p>
+            <a href = "/login.html" target = "_blank">Login</a>
         </Header>
         <div>
-            <p>Content div</p>
+            <ul>
+                <li><a href="/list.html">List view</a></li>
+                <li><a href="/list.html">Map View</a></li>
+            </ul>
+            <ul type='none'>
+                <li>
+                    <a href ="detail.html">
+                        <img src='https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg'>
+                        <h3>Radisson Blu Hotel</h3>
+                        <p>5 Star</p>
+                        <p>New Delhi</p>
+                    </a>
+                </li>
+                <li>
+                    <img src='https://media-cdn.tripadvisor.com/media/photo-w/15/06/31/5f/facade.jpg'>
+                    <h3>The Lalit New Delhi</h3>
+                    <p>4.5 Star</p>
+                    <p>New Delhi</p>
+                </li>
+                <li>
+                    <img src='https://media-cdn.tripadvisor.com/media/photo-w/1b/4e/9b/11/exterior.jpg'>
+                    <h3>Taj Palace</h3>
+                    <p>4 Star</p>
+                    <p>New Delhi</p>
+                </li>
+            </ul>
+            <img src='https://cdn.pixabay.com/photo/2018/01/31/05/43/web-3120321_960_720.png'>
+            <p>MAP VIEW</p>
         </div>
         <footer>
-            <p>Footer div</p>
+            <a href = "/contact.html" target = "_blank">Contact Us</a><br>
+            <img src = "assests/images/facebook.png" width ="22" height = "20">
+            <img src = "assests/images/instagram.png" width ="22" height = "20">
+            <img src = "assests/images/twitter.png" width ="22" height = "20">
+            <p>© 2020 ROOM SEARCH PVT.LTD</p>
         </footer>
     </body>
 </html>
