--- a/payment.html
+++ b/payment.html
@@ -5,13 +5,29 @@
     <body>
         <Header>
             <img src="assests/images/logo.png" alt="logo" width="150" height ="100">
-            <p>Header div</p>
+            <a href = "/login.html" target = "_blank">Login</a>
         </Header>
         <div>
-            <p>Content div</p>
+            <img src='https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg'><br>
+            <h2>Radisson Blu Hotel</h2>
+            <p>#38 of 1289 hotels in New Delhi</p>
+            <p>National Highway 8,New Delhi 110017</p>
+        </div>
+        <div>
+            <p><b>Name: </b>Nafees Fatima</p>
+            <p><b>Adult: </b>2</p>
+            <p><b>Check-in-Date: </b>01/03/2021</p>
+            <p><b>Check-out-Date: </b>03/03/2021</p>
+            <p><b>Tariff Breakdown: </b>Rs.1000 x 2 Adults x 5 Nights</p>
+            <p><b>Total Amount: </b>Rs.10000</p>
+            <a href="payment.html">Pay Now</a>
         </div>
         <footer>
-            <p>Footer div</p>
+            <a href = "/contact.html" target = "_blank">Contact Us</a><br>
+            <img src = "assests/images/facebook.png" width ="22" height = "20">
+            <img src = "assests/images/instagram.png" width ="22" height = "20">
+            <img src = "assests/images/twitter.png" width ="22" height = "20">
+            <p>© 2020 ROOM SEARCH PVT.LTD</p>
         </footer>
     </body>
 </html>
