--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <body>
         <Header>
             <img src="assests/images/logo.png" alt="logo" width="150" height ="100">
-            <a href = "/login.html" target = "_blank">Login</a>
+            <a href = "login.html">Login</a>
         </Header>
         <div>
-            <p>Search Bar</p>
+            <input type="text" placeholder="city"><br>
             <a href = "/list.html"><img src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fe/a2/new-delhi.jpg" width="300" height="300"></a>
             <img src="https://media-cdn.tripadvisor.com/media/photo-s/15/33/fc/f0/goa.jpg" width="300" height="300">
             <img src="https://media-cdn.tripadvisor.com/media/photo-s/0f/98/f7/df/charminar.jpg" width="300" height="300">
@@ -16,7 +16,7 @@
             <a href="/index.html">View more>></a>   
         </div>
         <footer>
-            <a href = "/contact.html" target = "_blank">Contact Us</a><br>
+            <a href = "contact.html" target=_self>Contact Us</a><br>
             <img src = "assests/images/facebook.png" width ="22" height = "20">
             <img src = "assests/images/instagram.png" width ="22" height = "20">
             <img src = "assests/images/twitter.png" width ="22" height = "20">
