--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,11 @@
         <title>Contact</title>
     </head>
     <body>
-        <p>CONTACT US</p>
+        <p>Thank You for reaching out!!</p>
+        <p>Please enter your Email we will get back to you</p>
+        <form action="index.html">
+            <input type="email" placeholder="Enter your email" required><br>
+            <input type="submit">
+        </form>
     </body>
 </html>
