--- a/detail.html
+++ b/detail.html
@@ -4,12 +4,29 @@
     </head>
     <body>
         <Header>
-            <img src="assests/images/logo.png" alt="logo" width="150" height ="100">
+            <a href ="index.html" target=_self><img src="assests/images/logo.png" alt="logo" width="150" height ="100"></a>
             <a href = "/login.html" target = "_blank">Login</a>
         </Header>
         <div>
             <img src='https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg'><br>
-            <a href='payment.html'>Book Now</a>
+            
+            <form action="payment.html">
+                <label for="adult">Adults:</label>
+                <!--<select id="adult" name="adults" min=1></select>-->
+                <input type="number" id="adult" name="adult" min="1" value="1"><br>
+
+                <label for="name">Name:</label>
+                <input type="text" id="name" name="name" required><br>
+
+                <label for="datemax">From Date:</label>
+                <input type="date" id="datemax" name="datemax"><br>
+                <label for="datemin">To Date:</label>
+                <input type="date" id="datemin" name="datemin"><br>
+
+                <label for="total">Total:</label>
+                <input type="text" id="total" name="total" disabled><br>
+                <input type="submit" value="Book Now">
+            </form>
             <h2>Radisson Blu Hotel</h2>
             <p>RATING</p>
             <P>5 Star</P>
