--- a/login.html
+++ b/login.html
@@ -3,6 +3,12 @@
         <title>Login</title>
     </head>
     <body>
-        <p>Login</p>
+        <form action="index.html">
+            <label for="name">Username: </label>
+            <input type="text" id = "name" name = "name" placeholder="Enter Username" required><br>
+            <label for="password">Password: </label>
+            <input type="text" id = "password" name = "password" placeholder="Enter Password" required><br>
+            <input type ="submit" value="login">
+        </form>
     </body>
 </html>
