--- a/payment.html
+++ b/payment.html
@@ -4,7 +4,7 @@
     </head>
     <body>
         <Header>
-            <img src="assests/images/logo.png" alt="logo" width="150" height ="100">
+            <a href ="index.html" target=_self><img src="assests/images/logo.png" alt="logo" width="150" height ="100"></a>
             <a href = "/login.html" target = "_blank">Login</a>
         </Header>
         <div>
