--- a/list.html
+++ b/list.html
@@ -1,47 +1,66 @@
 <html>
     <head>
         <title>List</title>
+        <style>
+            html,body{
+                 height:100%;
+                 width:100%;
+                 margin:0
+             }
+             #image{
+                 width:60px;
+                 height:60px;
+             }
+             #img {
+                 width: 250px;;
+                 height: 200px;
+             }
+             #SocialImages {
+                 width: 22px;;
+                 height: 20px;
+             }
+         </style>
     </head>
     <body>
         <Header>
-            <a href ="index.html" target=_self><img src="assests/images/logo.png" alt="logo" width="150" height ="100"></a>
+            <a href ="index.html" target=_self><img id="image" src="assests/images/logo.png" alt="logo" width="150" height ="100"></a>
             <a href = "/login.html" target = "_blank">Login</a>
         </Header>
         <div>
             <ul>
-                <li><a href="/list.html">List view</a></li>
-                <li><a href="/list.html">Map View</a></li>
+                <li><a href="#radImg">List view</a></li>
+                <li><a href="#mapImg">Map View</a></li>
             </ul>
             <ul type='none'>
                 <li>
                     <a href ="detail.html">
-                        <img src='https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg'>
+                        <img id="img" id="radImg" src='https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg'>
                         <h3>Radisson Blu Hotel</h3>
                         <p>5 Star</p>
                         <p>New Delhi</p>
                     </a>
                 </li>
                 <li>
-                    <img src='https://media-cdn.tripadvisor.com/media/photo-w/15/06/31/5f/facade.jpg'>
+                    <img  id="img" src='https://media-cdn.tripadvisor.com/media/photo-w/15/06/31/5f/facade.jpg'>
                     <h3>The Lalit New Delhi</h3>
                     <p>4.5 Star</p>
                     <p>New Delhi</p>
                 </li>
                 <li>
-                    <img src='https://media-cdn.tripadvisor.com/media/photo-w/1b/4e/9b/11/exterior.jpg'>
+                    <img id="img" src='https://media-cdn.tripadvisor.com/media/photo-w/1b/4e/9b/11/exterior.jpg'>
                     <h3>Taj Palace</h3>
                     <p>4 Star</p>
                     <p>New Delhi</p>
                 </li>
             </ul>
-            <img src='https://cdn.pixabay.com/photo/2018/01/31/05/43/web-3120321_960_720.png'>
+            <img id="mapImg" src='https://cdn.pixabay.com/photo/2018/01/31/05/43/web-3120321_960_720.png'>
             <p>MAP VIEW</p>
         </div>
         <footer>
             <a href = "/contact.html" target = "_blank">Contact Us</a><br>
-            <img src = "assests/images/facebook.png" width ="22" height = "20">
-            <img src = "assests/images/instagram.png" width ="22" height = "20">
-            <img src = "assests/images/twitter.png" width ="22" height = "20">
+            <img id="SocailImage" src = "assests/images/facebook.png" width ="22" height = "20">
+            <img id="SocailImage" src = "assests/images/instagram.png" width ="22" height = "20">
+            <img id="SocailImage" src = "assests/images/twitter.png" width ="22" height = "20">
             <p>© 2020 ROOM SEARCH PVT.LTD</p>
         </footer>
     </body>
