--- a/detail.html
+++ b/detail.html
@@ -5,7 +5,13 @@
             html,body{
                  height:100%;
                  width:100%;
-                 margin:0
+                 margin:0;
+             }
+             body{
+                 background-color:#e0e0e0;  
+             }
+             Header,Footer{
+                 background-color: rosybrown;
              }
              #image{
                  width:60px;
@@ -14,6 +20,13 @@
              #radImg {
                  width: 500px;;
                  height: 500px;
+                 margin: 2% 4% 0% 4%;
+             }
+             #formMargin{
+                 margin: 0% 4% 1% 4%;
+             }
+             .descMargin{
+                 margin: 1% 4% 2% 4%;
              }
              #SocialImages {
                  width: 22px;;
@@ -29,7 +42,7 @@
         <div>
             <img id="radImg" src='https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg'><br>
             
-            <form action="payment.html">
+            <form id="formMargin" action="payment.html">
                 <label for="adult">Adults:</label>
                 <!--<select id="adult" name="adults" min=1></select>-->
                 <input type="number" id="adult" name="adult" min="1" value="1"><br>
@@ -46,30 +59,32 @@
                 <input type="text" id="total" name="total" disabled><br>
                 <input type="submit" value="Book Now">
             </form>
-            <h2>Radisson Blu Hotel</h2>
-            <p>RATING</p>
-            <P>5 Star</P>
-            <p>AMENITIES</p>
-            <ul>
-                <li>
-                    Room service
-                </li>
-                <li>
-                    Restaurant
-                </li>
-                <li>
-                    Business Center
-                </li>
-                <li>
-                    Fitness Center
-                </li>
-                <li>
-                    Pool
-                </li>
-            </ul>
-            <h5>DESCRIPTION</h5>
-            <p>Over 900,000 Hotels Worldwide. Book Now, Pay When You Stay. List Your Property. Register Online. Sign Up For Deals. Become An Affiliate.</p>
-
+            <div class="descMargin">
+                <h2>Radisson Blu Hotel</h2>
+                <p>RATING</p>
+                <P>5 Star</P>
+                <p>AMENITIES</p>
+            
+                <ul>
+                    <li>
+                        Room service
+                    </li>
+                    <li>
+                        Restaurant
+                    </li>
+                    <li>
+                        Business Center
+                    </li>
+                    <li>
+                        Fitness Center
+                    </li>
+                    <li>
+                        Pool
+                    </li>
+                </ul>
+                <h5>DESCRIPTION</h5>
+                <p>Over 900,000 Hotels Worldwide. Book Now, Pay When You Stay. List Your Property. Register Online. Sign Up For Deals. Become An Affiliate.</p>
+            </div>
         </div>
         <footer>
             <a href = "/contact.html" target = "_blank">Contact Us</a><br>
