--- a/loader.html
+++ b/loader.html
@@ -1,8 +1,23 @@
 <html>
     <head>
         <title>Loader</title>
+        <style>
+            .loader {
+                width:70px;
+                height:70px;
+                border-radius: 50%;
+                border: 12px solid #f3f3f3;
+                border-top: 12px solid #444444;
+                margin: auto;
+                left:0;
+                right:0;
+                top:0;
+                bottom:0;
+                position:fixed;
+            }
+        </style>
     </head>
     <body>
-        <p>Loader</p>
+        <div class="loader"> </div>
     </body>
 </html>
