--- a/list.html
+++ b/list.html
@@ -5,11 +5,32 @@
             html,body{
                  height:100%;
                  width:100%;
-                 margin:0
+                 margin:0;
+             }
+             body{
+                 background-color:#e0e0e0;  
+             }
+             Header,Footer{
+                 background-color: rosybrown;
              }
              #image{
                  width:60px;
                  height:60px;
+             }
+             #radImg {
+                 margin:2%;
+             }
+             .radClass {
+                 background-color: rgb(132,136,139);
+                 width: 40%;
+             }
+             .lalitClass{
+                background-color: rgb(132,136,139);
+                 width: 40%;
+             }
+             .tajClass{
+                background-color: rgb(132,136,139);
+                 width: 40%;
              }
              #img {
                  width: 250px;;
@@ -33,24 +54,30 @@
             </ul>
             <ul type='none'>
                 <li>
-                    <a href ="detail.html">
-                        <img id="img" id="radImg" src='https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg'>
-                        <h3>Radisson Blu Hotel</h3>
-                        <p>5 Star</p>
+                    <div class="radClass">
+                        <a href ="detail.html">
+                            <img id="img" id="radImg" src='https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg'>
+                            <h3>Radisson Blu Hotel</h3>
+                            <p>5 Star</p>
+                            <p>New Delhi</p>
+                        </a>
+                    </div>
+                </li>
+                <li>
+                    <div class="lalitClass">
+                        <img  id="img" src='https://media-cdn.tripadvisor.com/media/photo-w/15/06/31/5f/facade.jpg'>
+                        <h3>The Lalit New Delhi</h3>
+                        <p>4.5 Star</p>
                         <p>New Delhi</p>
-                    </a>
+                    </div>
                 </li>
                 <li>
-                    <img  id="img" src='https://media-cdn.tripadvisor.com/media/photo-w/15/06/31/5f/facade.jpg'>
-                    <h3>The Lalit New Delhi</h3>
-                    <p>4.5 Star</p>
-                    <p>New Delhi</p>
-                </li>
-                <li>
-                    <img id="img" src='https://media-cdn.tripadvisor.com/media/photo-w/1b/4e/9b/11/exterior.jpg'>
-                    <h3>Taj Palace</h3>
-                    <p>4 Star</p>
-                    <p>New Delhi</p>
+                    <div class="tajClass">
+                        <img id="img" src='https://media-cdn.tripadvisor.com/media/photo-w/1b/4e/9b/11/exterior.jpg'>
+                        <h3>Taj Palace</h3>
+                        <p>4 Star</p>
+                        <p>New Delhi</p>
+                    </div>
                 </li>
             </ul>
             <img id="mapImg" src='https://cdn.pixabay.com/photo/2018/01/31/05/43/web-3120321_960_720.png'>
