--- a/payment.html
+++ b/payment.html
@@ -7,9 +7,30 @@
                  width:100%;
                  margin:0
              }
+             body{
+                 background-color:#e0e0e0;  
+             }
+             Header,Footer{
+                 background-color: rosybrown;
+             }
              #image{
                  width:60px;
                  height:60px;
+             }
+             .radClass {
+                 background-color: rgb(132,136,139);
+                 width: 50%;
+                 /* height: 20%; */
+                 margin: 2% auto;
+             }
+             .customerMargin{
+                 margin: 2%;
+             }
+             .boxMargin{
+                 margin:2%;
+                 border:solid;
+                 border-radius: 5px;
+                 padding: 1% 2%;
              }
              #radImg {
                  width: 500px;;
@@ -26,21 +47,23 @@
             <a href ="index.html" target=_self><img id="image"src="assests/images/logo.png" alt="logo" width="150" height ="100"></a>
             <a href = "/login.html" target = "_blank">Login</a>
         </Header>
-        <div>
+        <div class="radClass">
             <img id="radImg" src='https://media-cdn.tripadvisor.com/media/photo-w/17/b3/09/b4/by-the-poolside.jpg'><br>
             <h2>Radisson Blu Hotel</h2>
             <p>#38 of 1289 hotels in New Delhi</p>
             <p>National Highway 8,New Delhi 110017</p>
         </div>
-        <div>
+        <div class="customerMargin">
             <p><b>Name: </b>Nafees Fatima</p>
             <p><b>Adult: </b>2</p>
             <p><b>Check-in-Date: </b>01/03/2021</p>
             <p><b>Check-out-Date: </b>03/03/2021</p>
+        </div>
+        <div class="boxMargin">
             <p><b>Tariff Breakdown: </b>Rs.1000 x 2 Adults x 5 Nights</p>
             <p><b>Total Amount: </b>Rs.10000</p>
-            <a href="payment.html">Pay Now</a>
         </div>
+        <a href="payment.html">Pay Now</a>
         <footer>
             <a href = "contact.html" target = "_blank">Contact Us</a><br>
             <img id="SocailImage" src = "assests/images/facebook.png" width ="22" height = "20">
